--- a/src/index.css
+++ b/src/index.css
@@ -25,13 +25,13 @@
 .restaurant-list {
     display: flex;
     flex-wrap: wrap;
+    padding: 0 5%;
 }
 
 .card {
-    width: 140px;
+    width: 20%;
     margin: 10px 20px;
     padding: 10px 20px;
-    border: 1px solid orange;
 }
 
 .card>img {
@@ -39,6 +39,91 @@
     text-align: center;
 }
 
+.card > .cuisines-para {
+    word-break: break-all;
+}
+
+.card > .rating-time-cost span {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
 .search-container {
-    margin: 10px 0;
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+}
+
+.search-container .search-input {
+    width: 30%;
+    min-width: 325px;
+    padding: 10px;
+    margin-right: 20px;
+    border-radius: 4px;
+}
+
+.btn {
+    border: none;
+    border-radius: 4px;
+    width: auto;
+    cursor: pointer;
+    padding: 10px 20px;
+}
+
+.search-container .btn.search-btn {
+    background-color: orange;
+}
+
+.search-container .search-btn:hover {
+    background-color: white;
+    color: orange;
+    border: 1px solid orange;
+}
+
+.restaurant-list .no-results-class {
+    width: 600px;
+    margin: 32px auto;
+}
+
+.card > .rating-time-cost span.green-rating {
+    background-color: green;
+    padding: 4px;
+    border-radius: 1px;
+}
+
+.card > .rating-time-cost span.orange-rating {
+    background-color: orange;
+    padding: 4px;
+    border-radius: 1px;
+}
+
+.card > .rating-time-cost span.total-ratings {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.sort-container {
+    padding: 10px 0;
+}
+
+.sort-container .btn.sort-btn {
+    background-color: green;
+    margin-left: 20px;
+}
+
+.search-and-sort {
+    display: flex;
+    justify-content: space-around;
+}
+
+.sort-text {
+    padding: 2px 10px;
+}
+
+.sort-btn-cost, .sort-btn-time, .sort-btn-rating, .login-logout {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    margin-left: 8px;
+    margin-right: 8px;
 }
